--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>My first website </h1>
+    <p>hello everyone my new github account</p>
     
 </body>
 </html>
